# GameVerseFramework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_RULES.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  PROGRESS_JANUARY_2025.md  README.md  README_EN.md  README_ru.md  ROADMAP.md  SESSION_SUMMARY_FEB_2025.md  STRUCTURE.md  TECHNICAL_STACK.md  gameverse.toml
benchmarks/perf_demo/: Cargo.toml
benchmarks/perf_demo/src/: main.rs
core/: Cargo.toml  README.md
core/benches/: memory_operations.rs  native_execution.rs
core/config/: server.toml
core/src/: anticheat.rs  benchmarks.rs  engine.rs  ffi.rs  game.rs  lib.rs  net.rs  resource.rs  scripting.rs  utils.rs  wasm_ui.rs
core/src/config/: error.rs  mod.rs
core/src/fcl/: mod.rs
core/src/game_integration/: event_system.rs  game_hook.rs  memory_manager.rs  mod.rs  native_executor.rs  player_manager.rs
core/src/logging/: context.rs  error.rs  mod.rs
core/src/natives/: executor_bridge.rs  mod.rs  registry.rs  wrapper.rs
core/src/plugins/: config.rs  context.rs  dependency.rs  manager.rs  mod.rs  registry.rs
core/src/server/: mod.rs  runtime.rs  runtime_tests.rs  tests.rs
core/tests/: admin_api_status.rs  admin_api_windows.rs  fcl_integration_test.rs  ipc_integration.rs  ipc_status.rs  resource_manager_tests.rs  resource_watch_tests.rs  rest_api_integration.rs
sdk/cli-tools/: CLI_TOOLS_ROADMAP.md  Cargo.toml  README.md  V0_3_0_PLAN.md  gameverse.toml
sdk/cli-tools/src/: config.rs  main.rs
sdk/cli-tools/src/commands/: completions.rs  init.rs  marketplace.rs  migrate.rs  mod.rs  plugin.rs  sdk.rs  server.rs  templates.rs  version.rs
sdk/cli-tools/src/templates/: mod.rs
sdk/cli-tools/src/utils/: mod.rs
sdk/cli-tools/template-repository/: README.md
sdk/cli-tools/template-repository/basic/: template.toml
sdk/cli-tools/template-repository/basic/rust/: .gitignore  Cargo.toml  README.md  gameverse.toml
sdk/cli-tools/template-repository/basic/rust/src/: lib.rs
sdk/cli-tools/template-repository/client-basic/: template.toml
sdk/cli-tools/template-repository/client-basic/typescript/: README.md  gameverse.toml  package.json
sdk/cli-tools/template-repository/client-basic/typescript/src/: index.ts
sdk/cli-tools/template-repository/economy/: template.toml
sdk/cli-tools/template-repository/server-basic/: template.toml
sdk/cli-tools/template-repository/server-basic/rust/: Cargo.toml  README.md  gameverse.toml
sdk/cli-tools/template-repository/server-basic/rust/src/: lib.rs
sdk/cli-tools/tests/: integration_tests.rs
sdk/native-generator/: Cargo.toml  native_configs.toml  test_input.txt  test_output.txt  test_output3.txt  test_output4.txt  test_output5.txt  test_output6.txt
sdk/native-generator/.cache/: natives_cache.json
sdk/native-generator/debug_both/rust/: Cargo.toml
sdk/native-generator/debug_both/typescript/: natives.ts
sdk/native-generator/final_test/rust/: Cargo.toml
sdk/native-generator/fixed_output/typescript/: natives.ts
sdk/native-generator/generated_test/rust/: Cargo.toml
sdk/native-generator/generated_test/rust/src/natives/: mod.rs  player.rs
sdk/native-generator/generated_test_output/rust/: Cargo.toml
sdk/native-generator/generated_test_output/rust/src/natives/: mod.rs  test_category.rs  testcategory.rs
sdk/native-generator/production_complete/rust/: Cargo.toml
sdk/native-generator/production_complete/rust/src/: types.rs
sdk/native-generator/production_complete/rust/src/natives/: app.rs  audio.rs  brain.rs  cam.rs  clock.rs  cutscene.rs  datafile.rs  decorator.rs  dlc.rs  entity.rs  event.rs  files.rs  fire.rs  graphics.rs  hud.rs  interior.rs  itemset.rs  loadingscreen.rs  localization.rs  misc.rs  mobile.rs  mod.rs  money.rs  netshopping.rs  network.rs  object.rs  pad.rs  pathfind.rs  physics.rs  player.rs  recording.rs  replay.rs  savemigration.rs  script.rs  shapetest.rs  socialclub.rs  stats.rs  streaming.rs  system.rs  task.rs  (+3 more)
sdk/native-generator/production_complete/typescript/: natives.ts
sdk/native-generator/production_final/rust/: Cargo.toml
sdk/native-generator/production_final/rust/src/natives/: mod.rs
sdk/native-generator/production_output/rust/: Cargo.toml
sdk/native-generator/production_output/typescript/: natives.ts
sdk/native-generator/src/: fivem_parser copy.rs  fivem_parser.rs  main.rs  native_types copy.rs  native_types.rs  rdr2_parser.rs  rust_generator.rs  typescript_generator.rs  utils.rs
sdk/native-generator/test_coverage/rust/: Cargo.toml
sdk/native-generator/test_coverage/rust/src/: errors.rs  types.rs
sdk/native-generator/test_coverage/rust/src/natives/: mod.rs  ped.rs  vehicle.rs
sdk/native-generator/test_full_natives/rust/: Cargo.toml
sdk/native-generator/test_full_natives/rust/src/natives/: audio.rs  brain.rs  cam.rs  entity.rs  graphics.rs  hud.rs  misc.rs  mod.rs  network.rs  object.rs  ped.rs  player.rs  streaming.rs  task.rs  vehicle.rs  (+1 more)
sdk/native-generator/test_local_natives_full/rust/: Cargo.toml
sdk/native-generator/test_local_natives_full/rust/src/: lib.rs
sdk/native-generator/tests/: edge_cases.rs
sdk/native-generator/tests/data/: test_rust_overrides.md
sdk/native-generator/tests/data/TESTCATEGORY/: GET_DYNAMIC_ARRAY.md
sdk/native-generator/tests/data/TEST_CATEGORY/: test_rust_overrides.md
sdk/native-generator/tests/output/rust/: Cargo.toml
sdk/test-plugins/test-basic-plugin/: Cargo.toml  README.md  gameverse.toml
sdk/test-plugins/test-basic-plugin/src/: lib.rs
services/logging/: Cargo.toml  README.md  build.rs  docker-compose.yml
services/logging/examples/: README.md  basic_logging.rs  elasticsearch_logging.rs  grpc_client.rs
services/logging/proto/: logging.proto
services/logging/scripts/: README.md  setup_elasticsearch.sh
services/logging/src/: elasticsearch.rs  grpc.rs  lib.rs  main.rs
tools/fivem-analyzer/: Cargo.toml
tools/fivem-analyzer/src/: analysis_engine.rs  benchmarks.rs  esx.rs  lib.rs  main.rs  migration.rs  qbcore.rs  types.rs  utils.rs
tools/fivem-analyzer/test-resource/: fxmanifest.lua
(+218 files in other folders)
