[package]
name = "gameverse_core"
version = "0.1.0"
edition = "2021"
description = "Core component of GameVerse Framework - a high-performance multiplayer game framework"
authors = ["GameVerse Team"]
license = "MIT"
repository = "https://github.com/gameverse/gameverse-framework"

[lib]
name = "gameverse_core"
path = "src/lib.rs"

[[bin]]
name = "gameverse_server"
path = "src/bin/server.rs"

[[example]]
name = "dynamic_plugin_demo"
path = "../examples/dynamic_plugin_demo.rs"

[dependencies]
# Асинхронный рантайм
tokio = { version = "1.28.0", features = ["full"] }

# Логирование
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }

# Сетевой стек
quinn = "0.10.1"  # QUIC протокол
tonic = "0.9.2"   # gRPC
prost = "0.11.9"  # Protocol Buffers

# Асинхронные стримы (для сканирования директорий)
tokio-stream = "0.1.14"

# Сериализация
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.8.8"    # 🔥 TOML для конфигурации плагинов
flatbuffers = "23.3.3"

# Конфигурация
config = "0.13.3"
dotenv = "0.15.0"

# Утилиты
uuid = { version = "1.3.1", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
semver = "1.0.17"  # Семантическое версионирование для плагинов
rand = "0.8.5"     # Генерация случайных значений
sha2 = "0.10.6"    # Хеширование
notify = "6.1.1"   # 🔥 File system watcher для hot reload

# Взаимодействие с FFI
libloading = "0.8.0"  # Для динамической загрузки библиотек
libc = "0.2.141"
bindgen = "0.65.1"

# Работа с Lua
mlua = { version = "0.8.8", features = ["luajit", "vendored", "async"] }

# Работа с базами данных
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }

# Веб-сервер для административных API
axum = "0.6.18"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
hyper = "0.14.26"

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"
criterion = "0.5.1"
rstest = "0.17.0"
tempfile = "3.8.1"  # 🔥 Для тестов dynamic plugin loading

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

[features]
default = ["lua_scripting", "typescript_scripting", "plugin_system"] # 🔥 Добавил plugin_system
lua_scripting = []
typescript_scripting = []
wasm_scripting = []
plugin_system = []  # 🔥 НОВАЯ ФИЧА
extended_logging = []
monitoring = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
