[package]
name = "perf_demo"
version = "0.1.0"
authors = ["GameVerse Team"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
url = "2.4" 