[package]
name = "gameverse"
version = "0.2.0"
edition = "2021"
description = "Command-line tools for GameVerse Framework"
authors = ["GameVerse Team"]
license = "MIT"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
toml = "0.8.8"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
handlebars = "4.3.7"
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
walkdir = "2.3.3"
glob = "0.3.1"
semver = "1.0.17"
chrono = "0.4.24"
colored = "2.0.0"
indicatif = "0.17.3"
dialoguer = "0.10.4"
which = "4.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
console = "0.15.7"
clap_complete = "4.3.0"
flate2 = "1.0.28"
tar = "0.4.40"
regex = "1.10.3"
dirs = "5.0.1"
jsonwebtoken = "9"
eventsource-stream = "0.2"
futures-util = "0.3"
gameverse-core = { path = "../../core" }
notify = "6"

[build-dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.0"

[[bin]]
name = "gameverse"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.9"
